--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-starter.css">
 
@@ -81,8 +84,8 @@
       </div> 
     </div>
 
-    <div class="container">
-      <div class="row">
+    <div class="container-fluid">
+      <div class="row ">
         <section class="showcase">
           <video src="people.mp4" muted loop autoplay></video>
           <div class="overlay"></div>
@@ -106,11 +109,13 @@
         <div class="row">
           <div class="col-12">
             <div class=" center-div py-xl-6 py-lg-3">
-              <div class="welcome-left text-center py-md-3" style="width: 100em;">
+              <div class="welcome-left text-center py-md-3" style="width: 100em;" >
                   <h3 class="mb-4" style="color:black;">Coming soon on all devices. <br> Android, iOS and WEB</h3>
                   <a href=""><img src="android-store.png" alt="" width="170px" class="img-fluid"></a>
                 <a href=""><img src="apple-store.png" alt="" width="220px" class="img-fluid"></a>
+
               </div>
+              
             </div>
           </div>          
         </div>
